CREATE TYPE road_accidents.accident_severity AS enum ('Slight', 'Serious', 'Fatal');
