CREATE TYPE road_accidents.category AS enum ('Collision', 'PedestrianCollision', 'AnimalCollision', 'FixedObjectCollision', 'Rollover', 'NonCollision', 'Other');
