CREATE TYPE road_accidents.road_condition AS enum ('Dry', 'Wet', 'Icy', 'SnowCovered', 'Other');
