CREATE TYPE road_accidents.wind AS enum ('High', 'Low');
